mongos with stale config returns wrong results when useClientClusterCursor=true

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 3.1.9
    • Affects Version/s: None
    • Component/s: Querying, Sharding
    • None
    • Fully Compatible
    • ALL
    • Hide

      Run the jstests/sharding/zero_shard_version.js testcase.
      The last find command (currently at line 172)
      assert.neq(null, testDB_s0.user.findOne(

      { x: 1 }

      ));
      fails because testDB_s0.user.findOne(

      { x: 1 }

      ) returns "null"

      Show
      Run the jstests/sharding/zero_shard_version.js testcase. The last find command (currently at line 172) assert.neq(null, testDB_s0.user.findOne( { x: 1 } )); fails because testDB_s0.user.findOne( { x: 1 } ) returns "null"
    • QuInt A (10/12/15)
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Mongos returns null result for

       db.user.findOne({x:1}) 

      When mongo has correct sharding data it returns a document.

      The bug happens when mongo caches stale config where user collection is unsharded.
      Instead of returning null mongos should receive RecvStaleConfig error and reload configuration.

            Assignee:
            Misha Tyulenev (Inactive)
            Reporter:
            Misha Tyulenev (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: