SERVER-20530 SERVER-20568 mongos with stale config returns wrong results