jstests/sharding/mongos_rs_shard_failure_tolerance.js
@@ -16,9 +16,6 @@ var options = {rs : true, rsOptions : { nodes : 2 }};
 var st = new ShardingTest({shards : 3, mongos : 1, other : options});
 st.stopBalancer();
 
-// TODO: SERVER-20194. This test forces use of the old mongos query path.
-assert.commandWorked(st.s.adminCommand({setParameter: 1, useClusterClientCursor: false}));
-
 var mongos = st.s0;
 var admin = mongos.getDB( "admin" );
 var shards = mongos.getDB( "config" ).shards.find().toArray();
